src/style/shared/icons.less
// TODO: I need to normalize the naming convention, because there isn't one ATM -TR


.x-document-button(@name) {
  background: url("../img/ico-@{name}-white.svg") no-repeat center;
  background-size: .8rem;
}

.x-alignment-button(@name) {
    background: url("../img/ico-@{name}-black.svg") no-repeat center;
    border: none;
    width: 2rem;
    height: 2rem;
    padding: 0;
    margin: 0;
}

.x-flip-split-button(@name) {
    background: url("../img/ico-@{name}-black.svg") no-repeat center;
    background-position-x: 1rem;
    background-size: 1.5rem;
}

.x-align-split-button(@name) {
    background: url("../img/ico-@{name}-white.svg") no-repeat center;
    background-position: 1rem;
    background-size: 1.5rem;
}

.split-button__item__disabled {
    opacity: 0.3;
}

.selectableBlackButton(@name) {
    #@{name} {
      background: url("../img/ico-@{name}-black.svg") no-repeat center;
      background-size: 1.5rem;
      opacity: .35;
    }
    #@{name}:hover {
      background: url("../img/ico-@{name}-black.svg") no-repeat center;
      background-size: 1.5rem;
      opacity: 1;
    }
    #@{name}[data-selected="true"] {
      background: url("../img/ico-@{name}-black.svg") no-repeat center;
      background-size: 1.5rem;
      opacity: .85;
    }
    #@{name}[data-selected="mixed"] {
      background: url("../img/ico-@{name}-black.svg") no-repeat center;
      background-size: 1.5rem;
    }
}


.selectableWhiteButton(@name) {
    #@{name} {
      background: url("../img/ico-@{name}-white.svg") no-repeat center;
      background-size: 1.6rem;
      opacity: .35;
    }
    #@{name}:hover {
      background: url("../img/ico-@{name}-white.svg") no-repeat center;
      background-size: 1.6rem;
      opacity: 1;
    }
    #@{name}[data-selected="true"] {
      background: url("../img/ico-@{name}-black.svg") no-repeat center;
      background-size: 1.6rem;
      opacity: .85;
    }
    #@{name}[data-selected="mixed"] {
      background: url("../img/ico-@{name}-black.svg") no-repeat center, blue;
      background-size: 1.6rem;
    }
}


.document-header__previous { .x-document-button("previous-arrow") }
.document-header__next { .x-document-button("next-arrow") }


/* TOOLBAR ----------------------*/

.tool-current {
    background: url(../img/ico-tool-move-white.svg) no-repeat center;
    background-size: 2.5rem;
}

.x-toolbar-button(@name) {
    background: url("../img/ico-tool-@{name}-black.svg") no-repeat center;
    background-size: 2.5rem;
}

#tool-newSelect { .x-toolbar-button("newSelect")}
#tool-rectangle { .x-toolbar-button("rectangle") }
#tool-pen { .x-toolbar-button("pen") }
#tool-ellipse { .x-toolbar-button("ellipse") }
#tool-layout { .x-toolbar-button("layout") }
#tool-typeCreateOrEdit { .x-toolbar-button("typeCreateOrEdit") }
#tool-eyedropper { .x-toolbar-button("eyedropper") }
#tool-code { .x-toolbar-button("code") }
#tool-move { .x-toolbar-button("move") }

/* LAYER NAME ----------------------*/

.button-generator {
    background: url(../img/ico-generator-white.svg) no-repeat;
    background-size: 2rem;
    background-position-x: 1rem;
    background-position-y: 0.5rem;
}

.pop-over-header .button-generator {
    background: url(../img/ico-generator-black.svg) no-repeat;
    background-size: 2rem;
    background-position-x: 1rem;
    background-position-y: 0.5rem;
}

.x-mode-button(@name) {
    background: url("../img/ico-@{name}-black.svg") no-repeat;
    background-size: 2rem;
}

#mode-grid { .x-mode-button(mode-grid) }

#mode-divide { .x-mode-button(mode-divide) }

#mode-inset { .x-mode-button(mode-inset) }

/* TRANSFORM ----------------------*/

/* Distribute / Align */

.distribute-horizontally { .x-alignment-button("distribute-horizontally") }
.distribute-vertically { .x-alignment-button("distribute-vertically") }
.align-right { .x-alignment-button("align-right") }
.align-center { .x-alignment-button("align-center") }
.align-left { .x-alignment-button("align-left") }
.align-top { .x-alignment-button("align-top") }
.align-middle { .x-alignment-button("align-middle") }
.align-bottom { .x-alignment-button("align-bottom") }

/* Width / Height */


// TODO: Make a data-selected true version of this -TR
.x-toggle-button(@name) {
    background: url("../img/ico-@{name}-white.svg") no-repeat center;

}

.x-toggle-button-hover(@name) {

    .shared_hover_icon() {
        //opacity: 0.7;
        width: 2rem !important;
        height: 2rem !important;
        //border: none;
        //border-radius: 0;
        //z-index: 99;
    }

    // button[data-type="@{name}"]
    .button-simple[data-type="@{name}"],
    .face .button-toggle[data-type="@{name}"]
    {
        background-image: none;
        .shared_hover_icon();
    }

    .face .button-toggle[data-type="@{name}"][data-selected="true"],
    .fill-list__fill .button-toggle[data-type="@{name}"][data-selected="false"],
    .stroke-list__stroke .button-toggle[data-type="@{name}"][data-selected="false"],
    .drop-shadow-list__drop-shadow .button-toggle[data-type="@{name}"][data-selected="false"],
    {
        background: url("../img/ico-@{name}-white.svg") no-repeat center;
        .shared_hover_icon();
    }

    .face:hover .button-toggle[data-type="@{name}"]:not([data-selected="true"]),
    .fill-list__fill:hover .button-toggle[data-type="@{name}"]:not([data-selected="false"]),
    .stroke-list__stroke:hover .button-toggle[data-type="@{name}"]:not([data-selected="false"]),
    .drop-shadow-list__drop-shadow:hover .button-toggle[data-type="@{name}"]:not([data-selected="false"]),

    {
        background: url("../img/ico-@{name}-white.svg") no-repeat center;
        opacity: 0.5;
        //z-index: 0;
    }

//    li[data-selected="true"] button[data-type="@{name}"],
//    li[data-selected="true"] .button-simple[data-type="@{name}"],
    .face [data-selected="true"] .button-toggle[data-type="@{name}"],
    .fill-list__fill .button-toggle[data-type="@{name}"][data-selected="true"],
    .stroke-list__stroke .button-toggle[data-type="@{name}"][data-selected="true"],
    .drop-shadow-list__drop-shadow .button-toggle[data-type="@{name}"][data-selected="true"]{
        background: none;
        .shared_hover_icon();
    }

    .face__select_immediate .button-toggle[data-type="@{name}"][data-selected="true"],
    .face__select_ancestor .button-toggle[data-type="@{name}"][data-selected="true"]

    {
        background: url("../img/ico-@{name}-black.svg") no-repeat center;
        .shared_hover_icon();
    }

    .face__select_immediate:hover .button-toggle[data-type="@{name}"]:not([data-selected="true"]),
    .face__select_ancestor:hover .button-toggle[data-type="@{name}"]:not([data-selected="true"])

    {
        background: url("../img/ico-@{name}-black.svg") no-repeat center;
        //z-index: 0;
    }
}

.button-toggle[data-type="toggle-connected"][data-selected="true"] {
    .x-toggle-button("toggle-connected")
}

.button-toggle[data-type="toggle-connected"][data-selected="false"] {
    .x-toggle-button("toggle-disconnected")
}


/* Rotate / Flip */

#ico-flip-horizontal { .x-flip-split-button("flip-horizontal") }
#ico-flip-vertical { .x-flip-split-button("flip-vertical") }
#ico-swap { .x-flip-split-button("swap") }

/* Path Operations */

.selectableBlackButton(xor-union);
.selectableBlackButton(xor-subtract);
.selectableBlackButton(xor-intersect);
.selectableBlackButton(xor-difference);

/* STYLE ----------------------*/

.x-toggle-button-hover(toggle-trash);

/* Type */
.selectableWhiteButton(text-left);
.selectableWhiteButton(text-center);
.selectableWhiteButton(text-right);
.selectableWhiteButton(text-justified);

.button-combo:focus {
    background: url(../img/ico-search-white.svg) no-repeat center;
    background-position-x: .5rem;
}

.pop-over-header .button-combo:focus {
    background: url(../img/ico-search-black.svg) no-repeat center;
    background-position-x: .5rem;
}


.button-settings {
    background: url(../img/ico-type-gear-white.svg) no-repeat center;
    cursor: pointer;
}

/* PAGES ----------------------*/


.layerKind(@name) {
    .face__kind[data-kind="@{name}"], {
    background: url("../img/ico-layer-@{name}-white.svg") no-repeat center;
    background-size: contain;
    width: 2rem;
    height: 2rem;
    flex-shrink: 0;
  }

  // applies to the selected item
  .face__select_immediate .face__kind[data-kind="@{name}"],
  // applies to the ancestor of selected item
  .face__select_ancestor .face__kind[data-kind="@{name}"]
  {
    background: url("../img/ico-layer-@{name}-black.svg") no-repeat center;
    background-size: contain;
    width: 2rem;
    height: 2rem;
    flex-shrink: 0;
  }
}

.layerKind(4); //vector
.layerKind(7); //group
.layerKind(1); //pixel
.layerKind(3); //text
.layerKind(5); //smartobject


.x-toggle-button-hover(layer-visibility);
.x-toggle-button-hover(layer-lock);

